--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 }
 
 .footer {
-  margin-top: 50px;
+  margin-top: 17em;
   border-top: 2px solid #000;
   padding-top: 20px;
   background-color: #fff;
